--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype HTML>
 <HTML>
 <BODY>
+<H1>Hobbies</H1>
+<H3>Games</H3>
+I play video games with friends to pass the time.
+<H3>Chess</H3>
+I have played chess since the third grade, however these days its just a hobby and I don't compete anymore.
+<H1>Fun Facts</H1>
+<H3>Birthplace</H3>
+I was born in Tennessee and moved to Alabama when I was 8.
+<H3>Family</H3>
+I have 1 sister and all my relatives are in foreign countries.
+
 This is my website!
 </BODY>
 </HTML>
