--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!doctype HTML>
+
 <HTML>
+    
+<HEAD> <H1>Garrett's Website</H1> <HTML>
+    <HEAD>
+    <TITLE>Garrett's About Me</TITLE>
+    </HEAD>
+
 <BODY>
 <H1>Hobbies</H1>
 <H3>Games</H3>
