--- a/MyWebsite/hobby1.html
+++ b/MyWebsite/hobby1.html
@@ -2,23 +2,14 @@
 
 <HTML>
     
-<HEAD> <H1>Garrett's Website</H1> <HTML>
+<HEAD>  <HTML>
     <HEAD>
-    <TITLE>Garrett's About Me</TITLE>
+    <TITLE>Hobby 1</TITLE>
     </HEAD>
 
 <BODY>
-<H1>Hobbies</H1>
-<H3>Games</H3>
-I play video games with friends to pass the time.
-<H3>Chess</H3>
-I have played chess since the third grade, however these days its just a hobby and I don't compete anymore.
-<H1>Fun Facts</H1>
-<H3>Birthplace</H3>
-I was born in Tennessee and moved to Alabama when I was 8.
-<H3>Family</H3>
-I have 1 sister and all my relatives are in foreign countries.
-
-This is my website!
+<H1>Chess</H1>
+I have played chess since 3rd grade and really got into competing in 7th to 12th grade once I joined my School's Chess team. 
+I competed in Nationals and Super Nationals in the U800 and U1200 sections wand enjoyed the experience. Now I play on Chess.com for fun.
 </BODY>
 </HTML>
