--- a/MyWebsite/hobby1.html
+++ b/MyWebsite/hobby1.html
@@ -8,8 +8,12 @@
     </HEAD>
 
 <BODY>
+    <form style="display: inline" action="index.html" method="get">
+        <button>Home</button>
+        </form>
+        <HR>
 <H1>Chess</H1>
 I have played chess since 3rd grade and really got into competing in 7th to 12th grade once I joined my School's Chess team. 
-I competed in Nationals and Super Nationals in the U800 and U1200 sections wand enjoyed the experience. Now I play on Chess.com for fun.
+I competed in Nationals and Super Nationals in the U800 and U1200 sections and enjoyed the experience. Now I play on Chess.com for fun.
 </BODY>
 </HTML>
