--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -9,9 +9,9 @@
 
 <BODY>
 <H1>Hobbies</H1>
-<H3>Games</H3>
+<H3><a HREF='hobby2.html'>Games</a></H3>
 I play video games with friends to pass the time.
-<H3><a HREF=”hobby1.html”>Chess</a></H3>
+<H3><a HREF='hobby1.html'>Chess</a></H3>
 I have played chess since the third grade, however these days its just a hobby and I don't compete anymore.
 <H1>Fun Facts</H1>
 <H3>Birthplace</H3>
