--- a/MyWebsite/hobby2.html
+++ b/MyWebsite/hobby2.html
@@ -1,9 +1,9 @@
 <!doctype HTML>
-
+<HTML lang="en"></HTML>
 <HTML>
     
-<HEAD>  <HTML>
-    <HEAD>
+<HEAD>  
+    <meta charset="UTF-8">
     <TITLE>Hobby 2</TITLE>
     </HEAD>
 
