--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -1,9 +1,10 @@
 <!doctype HTML>
-
+<HTML lang="en"></HTML>
 <HTML>
     
-<HEAD> <H1>Garrett's Website</H1> <HTML>
-    <HEAD>
+<HEAD> 
+    <meta charset="UTF-8">
+    <H1>Garrett's Website</H1> 
     <TITLE>Garrett's About Me</TITLE>
     </HEAD>
 
