--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -1,12 +1,10 @@
 <!doctype HTML>
-<HTML lang="en"></HTML>
-<HTML>
-    
+<HTML lang="en">   
 <HEAD> 
     <meta charset="UTF-8">
     <H1>Garrett's Website</H1> 
     <TITLE>Garrett's About Me</TITLE>
-    </HEAD>
+ </HEAD>
 
 <BODY>
 <H1>Hobbies</H1>
