--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -1,20 +1,36 @@
 <!doctype HTML>
 <HTML lang="en">   
+
 <HEAD> 
     <meta charset="UTF-8">
     <TITLE>Garrett's About Me</TITLE>
 </HEAD>
-<BODY>
+
+<BODY bgcolor="DADADA">
 <H1>Hobbies</H1>
 <H3><a HREF='hobby2.html'>Games</a></H3>
 I play video games with friends to pass the time.
 <H3><a HREF='hobby1.html'>Chess</a></H3>
 I have played chess since the third grade, however these days its just a hobby and I don't compete anymore.
+<img src="chess.png" alt="chess.com" style="width: 500px;">
+
 <H1>Fun Facts</H1>
 <H3>Birthplace</H3>
 I was born in Tennessee and moved to Alabama when I was 8.
 <H3>Family</H3>
 I have 1 sister and all my relatives are in foreign countries.
+
+<H1>Likes</H1>
+    <UL>
+        <LI><font color=”green”>Mellow Mushroom</font></LI>
+        <LI><font color=”green”>Driving</font></LI>
+    </UL>
+    <H1>Dislikes</H1>
+    <UL>
+        <LI><font color=”crimson>Hot weather</font></LI>
+        <LI><font color=”crimson”>Drugs</font></LI>
+    </UL>
+
 
 This is my website!
 </BODY>
