--- a/MyWebsite/hobby2.html
+++ b/MyWebsite/hobby2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <TITLE>Hobby 2</TITLE>
 </HEAD>
-<BODY>
+<BODY bgcolor="DADADA"> 
     <form style="display: inline" action="index.html" method="get">
         <button>Home</button>
         </form>
