--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -20,13 +20,10 @@ I was born in Tennessee and moved to Alabama when I was 8.
 <H3>Family</H3>
 I have 1 sister and all my relatives are in foreign countries.
 
-<H1>Likes</H1>
+<H1>Likes/Dislikes</H1>
     <UL>
         <LI><font color=”green”>Mellow Mushroom</font></LI>
         <LI><font color=”green”>Driving</font></LI>
-    </UL>
-    <H1>Dislikes</H1>
-    <UL>
         <LI><font color=”crimson>Hot weather</font></LI>
         <LI><font color=”crimson”>Drugs</font></LI>
     </UL>
