--- a/MyWebsite/hobby1.html
+++ b/MyWebsite/hobby1.html
@@ -14,7 +14,7 @@
 I have played chess since 3rd grade and really got into competing in 7th to 12th grade once I joined my School's Chess team. 
 I competed in Nationals and Super Nationals in the U800 and U1200 sections and enjoyed the experience. Now I play on Chess.com for fun.
 
-<p>If you are interested in starting chess here is a link to sign up!:</p>
+<p>If you are interested in starting chess here is a link to sign up!</p>
 <a href="https://www.chess.com/login_and_go?returnUrl=https://www.chess.com/home">Chess.com</a>
 </BODY>
 </HTML>
