--- a/MyWebsite/hobby2.html
+++ b/MyWebsite/hobby2.html
@@ -14,6 +14,6 @@
 I have always enjoyed video games and began playing them in highschool with friends. I primarily play FPS and RPG games such as CS, Val, and GI. 
 I am fortunate enough to have a large friend group that also plays games so I can always pass the time with other people.
 <br>
-<img src="Games.jpg" alt="CS2" style="width: 500px;">
+<img src="CS2.png" alt="CS2" style="width: 500px;">
 </BODY>
 </HTML>
