--- a/MyWebsite/hobby2.html
+++ b/MyWebsite/hobby2.html
@@ -13,7 +13,9 @@
 <H1>Games</H1>
 I have always enjoyed video games and began playing them in highschool with friends. I primarily play FPS and RPG games such as CS, Val, and GI. 
 I am fortunate enough to have a large friend group that also plays games so I can always pass the time with other people.
-<br>
+
+<div style="display: flex; justify-content: center; align-items: center; width: 100%; margin-top: 100px;"></div>
 <img src="CS2.png" alt="CS2" style="width: 500px;">
+</div>
 </BODY>
 </HTML>
